feat: UI-kit и верстка шапки

--- a/src/index.html
+++ b/src/index.html
@@ -63,13 +63,111 @@
 <body>
   <!-- Шапка -->
   <header id="header" class="header">
-    <div class="container">
-      <div class="header__wrapper">
+    <div class="header__content">
+      <div class="container">
+        <div class="header__wrapper">
+          <div class="header__burger d-block d-lg-none">
+            <button class="hamburger hamburger--squeeze" type="button">
+              <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+              </span>
+            </button>
+          </div>
+          <!-- /.header__burger -->
 
+          <div class="header__logo">
+            <a href="">
+              <img class="logo logo--header" src="img/logo.svg" alt="">
+            </a>
+          </div>
+          <!-- /.header__logo -->
+
+          <div class="header__contact d-none d-lg-block">
+            <a class="link mb-1" href="" target="_blank">
+              <img class="me-2" src="img/icons/contact/pin.svg" alt="">
+              Офис продаж: 1-й пр-д Рождественского, 1А, 1 этаж, каб 6, 7
+            </a>
+
+            <a class="link mb-1" href="" target="_blank">
+              <img class="me-2" src="img/icons/contact/pin.svg" alt="">
+              Производство: 1-й пр-д Рождественского, 12
+            </a>
+
+            <div>
+              <img class="me-2" src="img/icons/contact/clock.svg" alt="">
+              пн-пт с 8:00 до 18:00
+            </div>
+          </div>
+          <!-- /.header__contact -->
+
+          <div class="header__callback d-none d-lg-block">
+            <a class="header__phone link mb-1" href="tel:">
+              <img class="me-2" src="img/icons/contact/phone.svg" alt="">
+              +7 (851) 248-03-98
+            </a>
+
+            <a class="header__phone link mb-1" href="tel:">
+              <img class="me-2" src="img/icons/contact/phone.svg" alt="">
+              +7 (961) 655-31-11
+            </a>
+
+            <a class="header__email link" href="mailto:">
+              <img class="me-2" src="img/icons/contact/mail.svg" alt="">
+              info@sp-fabricant.ru
+            </a>
+          </div>
+          <!-- /.header__callback -->
+
+          <a class="header__call d-block d-lg-none" href="tel:">
+            <img src="img/icons/contact/phone--big.svg" alt="">
+          </a>
+        </div>
+        <!-- /.header__wrapper -->
       </div>
-      <!-- /.header__wrapper -->
+      <!-- /.container -->
     </div>
-    <!-- /.container -->
+    <!-- /.header__content -->
+
+    <div class="header__nav d-none d-lg-block">
+      <div class="container">
+        <nav class="nav nav--header">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="">Каталог</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Калькулятор <br> выгоды</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">О компании</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Полезные статьи</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Гарантии</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Где купить</a>
+            </li>
+
+            <li class="nav__item">
+              <a class="nav__link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- /.nav -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.header__nav -->
+
+    
   </header>
 
 <!-- Основной контент -->
