feat: верстка "о нас"

--- a/src/index.html
+++ b/src/index.html
@@ -242,6 +242,33 @@
     </div>
     <!-- /.container -->
   </section>
+
+  <section id="about" class="section">
+    <div class="container">
+      <div class="about">
+        <div class="about__important">
+          Более
+          <br>
+          <span>200+</span>
+
+          <img src="img/layout/page/index/about/ellipse.svg" alt="" class="about__shape">
+        </div>
+
+        <p class="about__text">
+          модификаций стеклопакетов
+          <br>
+          мы разработали за время
+          <br>
+          существования нашей компании.
+        </p>
+      </div>
+      <!-- /.about -->
+
+      <img src="img/layout/page/index/about/picture.png" alt="" class="about__picture">
+      <img src="img/layout/page/index/about/cloud.png" alt="" class="about__cloud">
+    </div>
+    <!-- /.container -->
+  </section>
 </main>
 
 <!-- Подвал -->
