--- a/src/index.html
+++ b/src/index.html
@@ -269,6 +269,33 @@
     </div>
     <!-- /.container -->
   </section>
+
+  <section id="seo" class="section">
+    <div class="container">
+      <div class="seo">
+        <div class="section__header">
+          <h2 class="section__title text-center">
+            Краткая информация о стеклопакетах
+          </h2>
+        </div>
+        <!-- /.section__header -->
+
+        <div class="seo__content">
+          <p>
+            Стеклопакет – это герметичная конструкция, состоящая из 2-х или более стёкол, соединённых между собой дистанционными рамками. Герметичность стеклопакету обеспечивают 2 слоя герметика, надёжно склеивающих всю конструкцию. Поскольку стеклопакет занимает наибольшую площадь в оконных конструкциях, то в основном именно на них лежит
+            ответственность за
+            уровень звукоизоляции, сохранения тепла в доме и защиту от солнца. Конечно, какой-то процент тепла и шума удерживает профиль, но скорее он выполняет вспомогательную функцию. Стеклопакеты могут быть 1-камерными, 2-камерными и даже 3-камерными, энергосберегающими, шумозащитными, безопасными, цветными и много ещё какими. Камеры
+            стеклопакета
+            могут
+            наполнятся инертным газом (аргон, криптон).Так как стеклопакет главный в окне, поэтому выбору стеклопакета отведена важная роль. Ещё больше информации о стеклопакетах читайте в наших статьях.
+          </p>
+        </div>
+        <!-- /.seo__content -->
+      </div>
+      <!-- /.seo -->
+    </div>
+    <!-- /.container -->
+  </section>
 </main>
 
 <!-- Подвал -->
