feat: полезные статьи

--- a/src/index.html
+++ b/src/index.html
@@ -270,6 +270,88 @@
     <!-- /.container -->
   </section>
 
+  <section id="article-block" class="section">
+    <div class="container">
+      <div class="section__header">
+        <h2 class="section__title text-center">
+          Полезные статьи
+        </h2>
+      </div>
+      <!-- /.section__header -->
+
+      <div class="article-block">
+        <div class="row">
+          <div class="col-4">
+            <div class="card-article">
+              <picture class="card-article__picture lazy">
+                <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/article/1.jpg" alt="">
+              </picture>
+
+              <h3 class="card-article__title">
+                <a class="link" href="">
+                  Чем отличается стекло <br> от стеклопакета?
+                </a>
+              </h3>
+
+              <p class="card-article__description">
+                Стеклопакет – это светопрозрачная конструкция, в которой между стеклянными листами, по принципу слоеного пирога, находится пустое пространство – камера...
+              </p>
+            </div>
+            <!-- /.card-article -->
+          </div>
+          <!-- /.col-4 -->
+
+          <div class="col-4">
+            <div class="card-article">
+              <picture class="card-article__picture lazy">
+                <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/article/2.jpg" alt="">
+              </picture>
+
+              <h3 class="card-article__title">
+                <a class="link" href="">
+                  Триплекс стекло - что это?
+                </a>
+              </h3>
+
+              <p class="card-article__description">
+                Стеклопакет – это светопрозрачная конструкция, в которой между стеклянными листами, по принципу слоеного пирога, находится пустое пространство – камера...
+              </p>
+            </div>
+            <!-- /.card-article -->
+          </div>
+          <!-- /.col-4 -->
+
+          <div class="col-4">
+            <div class="card-article">
+              <picture class="card-article__picture lazy">
+                <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/template/card/article/3.jpg" alt="">
+              </picture>
+
+              <h3 class="card-article__title">
+                <a class="link" href="">
+                  Расшифровка формул <br> стеклопакетов
+                </a>
+              </h3>
+
+              <p class="card-article__description">
+                Стеклопакет – это светопрозрачная конструкция, в которой между стеклянными листами, по принципу слоеного пирога, находится пустое пространство – камера...
+              </p>
+            </div>
+            <!-- /.card-article -->
+          </div>
+          <!-- /.col-4 -->
+        </div>
+        <!-- /.row -->
+
+        <a href="" class="article-block__link">
+          <img src="img/layout/page/index/article-block/ellipse.svg" alt="">
+        </a>
+      </div>
+      <!-- /.article-block -->
+    </div>
+    <!-- /.container -->
+  </section>
+
   <section id="seo" class="section">
     <div class="container">
       <div class="seo">
