feat: "где купить"

--- a/src/index.html
+++ b/src/index.html
@@ -603,6 +603,34 @@
     <!-- /.container -->
   </section>
 
+  <section id="buy" class="section">
+    <div class="container">
+      <div class="buy">
+        <div class="section__header">
+          <h2 class="section__title text-center">
+            Где купить стеклопакеты
+          </h2>
+        </div>
+        <!-- /.section__header -->
+
+        <p class="buy__text">
+          <b>Более 150+</b> компаний уже реализуют наши стеклопакеты
+          <br>
+          Купить их можно по следующим адресам:
+        </p>
+
+        <div class="buy__action">
+          <a href class="button button-primary">Открыть карту с адресами</a>
+        </div>
+        <!-- /.buy__action -->
+
+        <img src="img/layout/page/index/buy/map.jpg" alt="" class="buy__picture">
+      </div>
+      <!-- /.buy -->
+    </div>
+    <!-- /.container -->
+  </section>
+
   <section id="article-block" class="section">
     <div class="container">
       <div class="section__header">
