feat: верстка футера

--- a/src/index.html
+++ b/src/index.html
@@ -743,12 +743,121 @@
 
 <!-- Подвал -->
 <footer id="footer">
-  <div class="container">
-    <div class="footer">
+  <div class="footer">
+    <div class="footer__content">
+      <div class="container">
+        <div class="footer__logo">
+          <a href="">
+            <img src="img/logo--footer.svg" alt="">
+          </a>
+        </div>
+        <!-- /.footer__logo -->
+
+        <div class="row">
+          <div class="col-5">
+            <div class="footer__nav">
+              <div class="footer__heading">ЧАСТНЫМ КЛИЕНТАМ</div>
+
+              <nav class="nav nav--footer">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a class="nav__link link link--yellow" href="">О комнании</a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a class="nav__link link link--yellow" href="">Гарантии</a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a class="nav__link link link--yellow" href="">Калькулятор выгоды</a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a class="nav__link link link--yellow" href="">Где купить</a>
+                  </li>
+                </ul>
+              </nav>
+              <!-- /.nav -->
+            </div>
+            <!-- /.footer__nav -->
+
+            <div class="footer__contact">
+              ИП Мармилов В.А.
+              <a class="link link--yellow" href="">Юридический адрес: 1-й проезд Рождественского, 12</a>
+              <a class="link link--yellow" href="">Адрес производства: 1-й проезд Рождественского 1А</a>
+            </div>
+            <!-- /.footer__contact -->
+          </div>
+          <!-- /.col-5 -->
+
+          <div class="col-7">
+            <div class="footer__callback">
+              <div class="footer__heading">По вопросам сотрудничества:</div>
+
+              <div class="footer__wrapper">
+                <div>
+                  <img class="me-2" src="img/icons/contact/mail--yellow.svg" alt="">
+                  E-mail:&nbsp;
+                  <a class="link link--yellow link--underline" href="mailto:">info@sp-fabricant.ru</a>
+                </div>
+
+                <div>
+                  <img class="me-2" src="img/icons/contact/phone--yellow.svg" alt="">
+                  <a class="link link--yellow link--underline" href="tel:78512480398">+7 851 248-03-98</a>,&nbsp;
+                  <a class="link link--yellow link--underline" href="tel:+79616553111">+7 961 655-31-11</a>
+                </div>
+
+                <div>
+                  <img class="me-2" src="img/icons/contact/clock--yellow.svg" alt="">
+                  пн-пт с 8:00 до 18:00
+                </div>
+
+                <div>
+                  <img class="me-2" src="img/icons/contact/pin--yellow.svg" alt="">
+                  <a class="link link--yellow" href="">
+                    Офис продаж: 1-й проезд Рождественского 1А, 1-й этаж, каб 6, 7
+                  </a>
+                </div>
+
+                <div>
+                  <img class="me-2" src="img/icons/contact/pin--yellow.svg" alt="">
+                  <a class="link link--yellow" href="">
+                    Производство: 1-й проезд Рождественского 12
+                  </a>
+                </div>
+              </div>
+              <!-- /.footer__wrapper -->
+            </div>
+            <!-- /.footer__callback -->
+          </div>
+          <!-- /.col-7 -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
     </div>
-    <!-- /.footer -->
+    <!-- /.footer__content -->
+
+    <div class="footer__info">
+      <div class="container">
+        <div class="footer__about">
+          <div class="footer__copyright">
+            Официальный сайт компании ФабрикантЪ Стеклопакеты.
+          </div>
+
+          <div class="footer__offer">
+            Информация на данном сайте не является публичной офертой и носит
+            <br>
+            исключительно информационный характер
+          </div>
+        </div>
+        <!-- /.footer__about -->
+      </div>
+      <!-- /.container -->
+    </div>
+    <!-- /.footer__info -->
   </div>
-  <!-- /.container -->
+  <!-- /.footer -->
 </footer>
 
 <!-- Скрипты -->
