feat: верстка "производство"

--- a/src/index.html
+++ b/src/index.html
@@ -389,6 +389,111 @@
     <!-- /.container -->
   </section>
 
+  <section id="manufacturing" class="section">
+    <div class="container">
+      <div class="manufacturing">
+        <div class="section__header">
+          <h2 class="section__title">
+            Как делают стеклопакеты
+            <br>
+            у нас на производстве
+          </h2>
+        </div>
+        <!-- /.section__header -->
+
+        <div class="manufacturing__video">
+          <img class="manufacturing__preview" src="img/layout/page/index/manufacturing/laptop.png" alt="">
+          <img class="manufacturing__play" src="img/icons/control/play.svg" alt="">
+          <span class="manufacturing__label">Видео по изготовлению стеклопакетов</span>
+        </div>
+        <!-- /.manufacturing__video -->
+
+        <p class="manufacturing__text">
+          за 1 минуту узнайте всю технологическую цепочку
+          <br>
+          производства стеклопакета
+        </p>
+      </div>
+      <!-- /.manufacturing -->
+
+    </div>
+    <!-- /.container -->
+  </section>
+
+  <section id="warranty" class="section">
+    <div class="container">
+      <div class="warranty">
+        <div class="warranty__content">
+          <div class="warranty__wrapper">
+            <div class="section__header">
+              <h2 class="section__title font-secondary">
+                Даем гарантию
+                <br>
+                от производителя
+              </h2>
+            </div>
+            <!-- /.section__header -->
+
+            <p class="warranty__text">
+              На всю линейку наших стеклопакетов,
+              <br>
+              при соблюдении условий эксплуатации.
+            </p>
+
+            <div class="warranty__action">
+              <a class="link link--yellow link--underline" href="">Читать условия эксплуатации</a>
+            </div>
+            <!-- /.warranty__action -->
+
+
+            <div class="warranty__picture">
+              <div class="warranty__window lazy">
+                <img class="image image--contain lazy__item lazy__item--blur" data-src="img/layout/page/index/warranty/window.png" alt="">
+              </div>
+              <!-- /.warranty__picture -->
+
+              <img class="warranty__badge" src="img/layout/page/index/warranty/badge.png" alt="">
+            </div>
+            <!-- /.warranty__picture -->
+          </div>
+          <!-- /.warranty__wrapper -->
+        </div>
+        <!-- /.warranty__content -->
+
+        <div class="warranty__additional">
+          <picture class="warranty__picture lazy">
+            <img class="image image--cover lazy__item lazy__item--blur" data-src="img/layout/page/index/warranty/picture.png" alt="">
+          </picture>
+
+          <p class="warranty__text">
+            Наши стеклопакеты изготавливаются
+            <br>
+            в соответствии с ГОСТ 24866-2014 и СНиП,
+            <br>
+            что подтверждает наличие декларации
+          </p>
+
+          <p class="warranty__document">
+            <a data-fslightbox="document" href="img/layout/page/index/warranty/document/full-1.jpg">
+              <picture>
+                <img class="image image--cover" src="img/layout/page/index/warranty/document/1.jpg" alt="">
+              </picture>
+            </a>
+
+            <a data-fslightbox="document" href="img/layout/page/index/warranty/document/full-2.jpg">
+              <picture>
+                <img class="image image--cover" src="img/layout/page/index/warranty/document/2.jpg" alt="">
+              </picture>
+            </a>
+          </p>
+        </div>
+        <!-- /.warranty__additional -->
+      </div>
+      <!-- /.warranty -->
+    </div>
+    <!-- /.container -->
+  </section>
+
   <section id="gallery" class="section">
     <div class="gallery">
       <div class="swiper">
@@ -745,7 +850,7 @@
 <footer id="footer">
   <div class="footer">
     <div class="footer__content">
-      <div class="container">
+      <div class="container container--wide">
         <div class="footer__logo">
           <a href="">
             <img src="img/logo--footer.svg" alt="">
@@ -790,7 +895,7 @@
           </div>
           <!-- /.col-5 -->
 
-          <div class="col-7">
+          <div class="offset-1 col-6">
             <div class="footer__callback">
               <div class="footer__heading">По вопросам сотрудничества:</div>
 
@@ -839,7 +944,7 @@
     <!-- /.footer__content -->
 
     <div class="footer__info">
-      <div class="container">
+      <div class="container container--wide">
         <div class="footer__about">
           <div class="footer__copyright">
             Официальный сайт компании ФабрикантЪ Стеклопакеты.
@@ -865,9 +970,11 @@
 <script src="scripts/libraries/lazyload.js"></script>
 <script src="scripts/libraries/forms.js"></script>
 <script src="scripts/libraries/swiper.min.js"></script>
+<script src="scripts/libraries/fslightbox.js"></script>
 
 <script src="scripts/base.js"></script>
 <script src="scripts/init.js"></script>
+<script src="scripts/header.js"></script>
 <!-- endbuild -->
 </body>
 
